# gn_module_conservation_flora_exsitu

./: .editorconfig  .gitignore  README.md  pyproject.toml
backend/gn_module_conservation_flora_exsitu/: __init__.py  blueprint.py  conf_schema_toml.py  models.py  repositories.py
backend/gn_module_conservation_flora_exsitu/migrations/: 308061920435_declare_available_perms.py  774793661884_add_specific_data.py  e93f05515c4e_create_module_schema.py  f582226858a9_create_module_schema.py
backend/gn_module_conservation_flora_exsitu/migrations/data/: data.sql  nomenclatures.csv  schema.sql
frontend/: .prettierrc  package-lock.json  package.json
frontend/app/harvest-form/: harvest-form.component.css  harvest-form.component.html  harvest-form.component.ts
frontend/app/harvest-map-list/: harvest-map-list.component.css  harvest-map-list.component.html  harvest-map-list.component.ts
